--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEQZiZlS1C2k31kUXdh6iz",
+      "authorship_tag": "ABX9TyPaKALY6sggdr6qRi9SWx/u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,10 +38,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Describe your proposed project in a text cell. Include the following sections:\n",
-        "- Background\n",
-        "- Project Description\n",
-        "- Performance Metric\n"
+        "# Capital Bikeshare Membership Prediction and Rider Preference\n",
+        "\n",
+        "## Background\n",
+        "Bikeshare programs in large cities offer a cost effective and enviromentally friendly mode of transportation for citizens and tourists. The bike docks that are integral to these programs are able to collect a number of data points about each ride. Research has been conducted by the [Department of Transportation](https://data.bts.gov/stories/s/Summary-of-Docked-Bikeshare-Trips-by-System-and-Ot/7fgy-2zkf/) on the total usage of bikeshares and the membership numbers of the program but extensive research into the differences between casual and member riders has not been conducted. I want to use the data provided by Capital Bikeshare to build a model that can predict based off the charactoristics of a ride whether that ride was made by a member (ride with an annual subscription) or a non-member.\n",
+        "\n",
+        "## Project Description\n",
+        "This project seeks learn more about the behaviours of bikeshare users by creating a membership prediction model for Capital Bikeshare (CaBi). The analysis is conducted on user trip data from [August 2023 rides](https://s3.amazonaws.com/capitalbikeshare-data/index.html) provided by Captial Bikeshare.\n",
+        "\n",
+        "## Performance Metrics\n",
+        "\n",
+        "Accuracy - Can the model correctly predict whether a ride was taken by a member or a casual rider? This will involve training against a data set and comparing the model's determination against the data from Capital Bikeshare.\n",
+        "\n",
+        "Characteristics - Which characteristics of a ride are more important for member? Using the model is it possible to identify attributes of a ride that are more common amongst members."
       ],
       "metadata": {
         "id": "yfCO4H0EKYXQ"
