--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM24Hkmrp+iRJnR3UXY2ues",
+      "authorship_tag": "ABX9TyPqszLY26v4tFQNmhI2JWpL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,13 +48,35 @@
         "\n",
         "## Performance Metrics\n",
         "\n",
-        "Accuracy - Can the model correctly predict whether a ride was taken by a member or a casual rider? This will involve training against a dataset and comparing the model's determination against the data from Capital Bikeshare.\n",
+        "Accuracy - Can the model correctly predict whether a ride was taken by a member or a casual rider? This will involve training against a dataset and comparing the model's determination against the data from Capital Bikeshare. Results will be recorded into a confusion matrix and a classification accuracy will calculated using the function below.\n",
         "\n",
-        "Characteristics - Which characteristics of a ride are more important for members? Using the model, is it possible to identify attributes of a ride that are more common among members.\n"
+        "\n",
+        "| Actual | Predicted |\n",
+        "|---|---|\n",
+        "| Positive | True Positive (TP) | False Positive (FP) |\n",
+        "| Negative | False Negative (FN) | True Negative (TN) |\n",
+        "\n",
+        "$\n",
+        "Accuracy =\\frac{TruePositive+TrueNegative}{𝑇rue𝑃ositive+𝐹alse𝑃ositive+𝐹alse𝑁egative+𝑇rue𝑁egative}\n",
+        "$\n",
+        "\n",
+        "Characteristics - Which characteristics of a ride are more important for members? Using the model, is it possible to identify attributes of a ride that are more common among members.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "yfCO4H0EKYXQ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wah9DD74KAWG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
