--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNw+mOW646sdnplfV1d4Qn/",
+      "authorship_tag": "ABX9TyN3cRDDhh7+iCbox9GN2uu3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/joshualawrencemorgan/CS5265-Foundations-of-Machine-Learning/blob/main/Assignment1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/joshualawrencemorgan/CS5265-Foundations-of-Machine-Learning/blob/add_data/Assignment1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -63,6 +63,40 @@
       ],
       "metadata": {
         "id": "yfCO4H0EKYXQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Cleaning\n",
+        "```python3\n",
+        "df = df.dropna()\n",
+        "```\n",
+        "\n",
+        "Format datetime and create duration\n",
+        "```python\n",
+        "df['started_at'] = pd.to_datetime(df['started_at'])\n",
+        "df['ended_at'] = pd.to_datetime(df['ended_at'])\n",
+        "df['duration'] = (df['ended_at'] - df['started_at']).dt.total_seconds()\n",
+        "```\n",
+        "Add day of week\n",
+        "```python3\n",
+        "df['day_of_week'] = df['started_at'].dt.dayofweek\n",
+        "```\n",
+        "\n",
+        "Create distance column\n",
+        "```python\n",
+        "df['distance'] = df.apply(lambda row: geodesic((row['start_lat'], row['start_lng']),(row['end_lat'], row['end_lng'])).miles, axis=1)\n",
+        "```\n",
+        "\n",
+        "To limit our data to a couple of weeks use:\n",
+        "```python3\n",
+        "ef = df[df['started_at'].between('2023-07-16', '2023-07-29')]\n",
+        "ef.to_csv('cabi_2023-07-16_2023-07-29')\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "d6f7FTRxsCmX"
       }
     }
   ]
