--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3cRDDhh7+iCbox9GN2uu3",
+      "authorship_tag": "ABX9TyMyAPrTOrYMLePqtrqkcBGZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,13 @@
         "df['distance'] = df.apply(lambda row: geodesic((row['start_lat'], row['start_lng']),(row['end_lat'], row['end_lng'])).miles, axis=1)\n",
         "```\n",
         "\n",
-        "To limit our data to a couple of weeks use:\n",
+        "Remove 0 distance and 0 duration rides\n",
+        "```python3\n",
+        "df = (df[df['distance'] > 0])\n",
+        "df = (df[df['duration'] > 0])\n",
+        "```\n",
+        "\n",
+        "To limit the data to a couple of weeks use:\n",
         "```python3\n",
         "ef = df[df['started_at'].between('2023-07-16', '2023-07-29')]\n",
         "ef.to_csv('cabi_2023-07-16_2023-07-29')\n",
@@ -97,6 +103,42 @@
       ],
       "metadata": {
         "id": "d6f7FTRxsCmX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 1: Which group of riders, member or nonmembers, is more likely to travel a further distance?"
+      ],
+      "metadata": {
+        "id": "lEspuhXY3gbe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 2: Which group of riders, member or nonmembers, is more likely to take a short trip (< 10 minutes)?"
+      ],
+      "metadata": {
+        "id": "WBl_wbDx38cl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 3: Are members more likely to use the bikes early in the morning than non-members?"
+      ],
+      "metadata": {
+        "id": "TUDjpT_r5a9O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 4: Which group of users is more likely to use electric bikes?"
+      ],
+      "metadata": {
+        "id": "AMn-s5HL5lv4"
       }
     }
   ]
