explained feature engineering

--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyAPrTOrYMLePqtrqkcBGZ",
+      "authorship_tag": "ABX9TyPMYH4StBi8c1fwvI06yz+f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,41 +68,42 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data Cleaning\n",
-        "```python3\n",
-        "df = df.dropna()\n",
-        "```\n",
+        "## Feature Engineering\n",
         "\n",
-        "Format datetime and create duration\n",
+        "The data provided by Capital Bikeshare requires a serious amount of cleaning and feature engineering to provide a more holistic understanding of the ride data. Here I propose 3 features to be engineered.\n",
+        "\n",
+        "### Duration Feature\n",
+        "Using pandas to format the current features 'started_at' and 'ended_at' in to a datetime will allow for the creation of a duration feature that will provide the more context to each ride.\n",
         "```python\n",
         "df['started_at'] = pd.to_datetime(df['started_at'])\n",
         "df['ended_at'] = pd.to_datetime(df['ended_at'])\n",
         "df['duration'] = (df['ended_at'] - df['started_at']).dt.total_seconds()\n",
         "```\n",
-        "Add day of week\n",
+        "\n",
+        "### Day of the week Feature\n",
+        "Extrapolating what day of the week the ride was on will help our machine learning process identify patterns across multiple weeks. 'day_of_week' is stored as an enum with sunday being 0 and saturday being 6.\n",
         "```python3\n",
         "df['day_of_week'] = df['started_at'].dt.dayofweek\n",
         "```\n",
         "\n",
-        "Create distance column\n",
-        "```python\n",
-        "df['distance'] = df.apply(lambda row: geodesic((row['start_lat'], row['start_lng']),(row['end_lat'], row['end_lng'])).miles, axis=1)\n",
-        "```\n",
+        "### Distance Feature\n",
+        "Determining the actual path that bikes took would require extremely expensive GPS tracker to be installed and maintained in each bike. This feature seeks to provide a suitable alternative by calculating the geographical distance between where the bike was checked out and where the bike started. This will provide even more context to each ride and help provide more insight into the behaviour of riders.\n",
         "\n",
-        "Remove 0 distance and 0 duration rides\n",
         "```python3\n",
-        "df = (df[df['distance'] > 0])\n",
-        "df = (df[df['duration'] > 0])\n",
-        "```\n",
-        "\n",
-        "To limit the data to a couple of weeks use:\n",
-        "```python3\n",
-        "ef = df[df['started_at'].between('2023-07-16', '2023-07-29')]\n",
-        "ef.to_csv('cabi_2023-07-16_2023-07-29')\n",
+        "df['distance'] = df.apply(lambda row: geodesic((row['start_lat'], row['start_lng'])\n",
         "```"
       ],
       "metadata": {
-        "id": "d6f7FTRxsCmX"
+        "id": "aZqfT6Iv8C_9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "La_vlFb75-q-"
       }
     },
     {
