Added initial pipeline

--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMYH4StBi8c1fwvI06yz+f",
+      "authorship_tag": "ABX9TyMn5Jm/WwDcOxFCrv6QG0jE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,22 +29,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Assignment 1"
-      ],
-      "metadata": {
-        "id": "5BRWvycBKgG7"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Capital Bikeshare Membership Prediction and Rider Preference\n",
         "\n",
         "## Background\n",
         "Bikeshare programs in large cities offer a cost-effective and environmentally friendly mode of transportation for citizens and tourists. The bike docks that are integral to these programs can collect several data points about each ride. Research has been conducted by the [Department of Transportation](https://data.bts.gov/stories/s/Summary-of-Docked-Bikeshare-Trips-by-System-and-Ot/7fgy-2zkf/) on the total usage of bikeshare programs and the membership numbers of the program, but extensive research into the differences between casual and member riders has not been conducted. I want to use the data provided by the bikeshare program in Washington, D.C., Capital Bikeshare, to build a model that can predict, based on the characteristics of a ride, whether that ride was made by a member (a rider with an annual subscription) or a non-member.\n",
         "\n",
         "## Project Description\n",
-        "This project seeks to learn more about the behaviors of bikeshare users by creating a membership prediction model for Capital Bikeshare (CaBi). The analysis is conducted on user trip data from [August 2023 rides](https://s3.amazonaws.com/capitalbikeshare-data/index.html) provided by Capital Bikeshare. I anticipate that the results of the model will highlight key differences in ridership behaviors such as time of ride, bike type, and duration of ride that could help CaBi better serve its customers and maximize profitability.\n",
+        "This project seeks to learn more about the behaviors of bikeshare users by creating a membership prediction model for Capital Bikeshare (CaBi). The analysis is conducted on user trip data from [July 2023 rides](https://s3.amazonaws.com/capitalbikeshare-data/index.html) provided by Capital Bikeshare. I anticipate that the results of the model will highlight key differences in ridership behaviors such as time of ride, bike type, and duration of ride that could help CaBi better serve its customers and maximize profitability.\n",
         "\n",
         "## Performance Metrics\n",
         "\n",
@@ -100,6 +91,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Initial Pipeline\n",
+        "\n",
+        "Before starting to answer questions about the data some cleaning must be done.\n",
+        "\n",
+        "The new features `distance` and `duration` make it easy to spot anamolies in the data. Through user error or sensor error a ride with no distance or duration could be recorded. These can be removed using the following:\n",
+        "```python3\n",
+        "df = (df[df['distance'] > 0])\n",
+        "df = (df[df['duration'] > 0])\n",
+        "```\n",
+        "\n",
+        "The Capital Bikeshare dataset provides an ambudance of data. In order to be able to perform the task of this project in a timely manner the dataset should be reduced to two weeks. The last two weeks of July were chosen to avoid holidays skewing data though further investigation could reveal valuable information.\n",
+        "```python3\n",
+        "ef = df[df['started_at'].between('2023-07-16', '2023-07-29')]\n",
+        "ef.to_csv('Capital-Bikeshare-Dataset-cleaned.csv')\n"
+      ],
+      "metadata": {
+        "id": "DmeyZCw9DKT1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##Exploratory Data Analysis"
       ],
       "metadata": {
@@ -140,6 +153,20 @@
       ],
       "metadata": {
         "id": "AMn-s5HL5lv4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Train test split\n",
+        "based on the metadata (such as size\n",
+        "and target class distribution) of your dataset, briefly outline your train/test percent split. Include the percentage for your golden holdout set if you plan to leave one out\n",
+        "\n",
+        "##Model fitting and evaluation\n",
+        "list 1-3 assumptions you have about feature importance or how you anticipate your model’s performance will be"
+      ],
+      "metadata": {
+        "id": "C8jXoF6iAP3I"
       }
     }
   ]
