answered model comparison questions

--- a/Capital_Bikeshare_ML_Project.ipynb
+++ b/Capital_Bikeshare_ML_Project.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joshualawrencemorgan/CS5265-Foundations-of-Machine-Learning/blob/main/Capital_Bikeshare_ML_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yfCO4H0EKYXQ"
       },
       "source": [
@@ -116,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -327,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -379,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -434,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -494,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -561,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -637,7 +647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Y_9uGE88_8My"
       },
@@ -658,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "aOVyEFkdvnAM"
       },
@@ -670,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "u0da3A_RAB-X"
       },
@@ -682,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "bQIV61UyAB0E"
       },
@@ -693,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -872,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "VtLPhhmyAjgU"
       },
@@ -887,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -936,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "z_nV4zJfB_MV"
       },
@@ -958,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1194,9 +1204,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
-        "id": "tI7akW4TH8qV"
+        "id": "tI7akW4TH8qV",
+        "outputId": "65f19ca5-9e6a-41e8-e4fc-5c1a5067870a"
       },
       "outputs": [
         {
@@ -1735,9 +1746,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
-        "id": "JQ35bK4PIKjh"
+        "id": "JQ35bK4PIKjh",
+        "outputId": "4238fee9-c289-4fc9-e22f-44d03a9b46bd"
       },
       "outputs": [
         {
@@ -1773,9 +1785,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
-        "id": "o2ZNZz3mAGfQ"
+        "id": "o2ZNZz3mAGfQ",
+        "outputId": "695d1114-d72b-40ca-9070-893326b3a9ee"
       },
       "outputs": [
         {
@@ -1807,7 +1820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "t7HbLlvNIVQ9"
       },
@@ -1833,9 +1846,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
-        "id": "-39P_1QDIkjg"
+        "id": "-39P_1QDIkjg",
+        "outputId": "31d73b27-b81c-44d5-c2f4-23716a3e2490"
       },
       "outputs": [
         {
@@ -1869,7 +1883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "FTg-kYtv-qmr"
       },
@@ -1889,9 +1903,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
-        "id": "Vv9R_dDkIjvg"
+        "id": "Vv9R_dDkIjvg",
+        "outputId": "5b3f2aca-e33e-4b6a-f45d-0d78fa920cc3"
       },
       "outputs": [
         {
@@ -2021,9 +2036,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
-        "id": "DQiPtyS-ImdB"
+        "id": "DQiPtyS-ImdB",
+        "outputId": "34cabebe-a9dd-4ee7-fe50-45cb9c05e180"
       },
       "outputs": [
         {
@@ -2061,7 +2077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "cr49n19vLmsg"
       },
@@ -2087,9 +2103,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
-        "id": "fjr6Glm5LgCI"
+        "id": "fjr6Glm5LgCI",
+        "outputId": "bc436c94-0f33-4650-e42e-41dd65cda0b5"
       },
       "outputs": [
         {
@@ -2123,7 +2140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "Vw9LnuLqLqCd"
       },
@@ -2144,9 +2161,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
-        "id": "lWOieF93NCcM"
+        "id": "lWOieF93NCcM",
+        "outputId": "7ef5417e-fa9d-4270-b5ca-9cdbd06b526e"
       },
       "outputs": [
         {
@@ -2264,8 +2282,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "hD1I23yvwux-",
+        "outputId": "48fbca40-0628-4079-ac48-89c42fba8a1d"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -2302,8 +2323,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "LLCPt2avwux-"
+      },
       "outputs": [],
       "source": [
         "# get back the categorical features' original categories - recall that index 0 had the cat_pipe\n",
@@ -2326,8 +2349,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ciCuKLeswux-",
+        "outputId": "8d7b9a6b-325e-49dc-e69b-79970759df4c"
+      },
       "outputs": [
         {
           "data": {
@@ -2360,7 +2386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "YNJ_6oFBTcfL"
       },
@@ -2379,9 +2405,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
-        "id": "s4VD2pGUVTL-"
+        "id": "s4VD2pGUVTL-",
+        "outputId": "f0fc1fb4-8e2b-48e4-cff7-d147639179eb"
       },
       "outputs": [
         {
@@ -2505,8 +2532,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "D-P0TaCewux_",
+        "outputId": "a27ca29e-816a-4fad-f77d-2f7d5a9414e0"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -2543,8 +2573,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "c57cBMUtwux_"
+      },
       "outputs": [],
       "source": [
         "# get back the categorical features' original categories - recall that index 0 had the cat_pipe\n",
@@ -2567,8 +2599,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "-aJD2FKNwux_",
+        "outputId": "df1577c0-280d-469d-9fc7-805f1c98dd1e"
+      },
       "outputs": [
         {
           "data": {
@@ -2598,7 +2633,7 @@
       "source": [
         "## Model Comparision\n",
         "\n",
-        "1) which model (with your fine-tuned hyperparameters) resulted in the best performance (feel free to list multiple models that performed similarly well), 2) did the results match your expectations, and explain why it did or did not match your expected performance, and 3) what did you think the reason was that a particular model performed better or worse than others; or, if all models had similar performance, what does that mean for your data?\n"
+        "The margin was thin but the random forest model performed the best. I expected the RF classifier to perform the best because of my data set. Sometimes there was an overlap in behavior between members and casuals, this made some classifiers wrongly group together the two binary classes. Especially for the SVC I think the data set tended to be too imbalanced and lended itself to be overfitted by the SVC."
       ]
     }
   ],
@@ -2606,7 +2641,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "V100",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
